--- a/GalleryExample01/app/src/main/AndroidManifest.xml
+++ b/GalleryExample01/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Picture"
+            android:label="@string/app_name2">
+        </activity>
     </application>
 
 </manifest>
